apps/talos-home/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.lan`)
      kind: Rule
      middlewares:
        - name: traefik-chain-noauth
          namespace: networking
      services:
        - name: vm-stack-grafana
          port: 80
  tls:
    secretName: grafana-tls
